--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
 
     <!-- start testimonial -->
     <section class="testimonial-section">
-        <div class="testimonial-container">
+        <div class="container">
           <!-- Left Content -->
           <div class="testimonial-left">
             <div class="head-text">
